@@ -1,8 +1,5 @@
 package me.minphoneaung.springcrud.web.rest.mapper;
 
-import me.minphoneaung.springcrud.web.rest.dto.SchoolDto;
-import org.mapstruct.Mapper;
-import org.mapstruct.Mapping;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 
@@ -21,7 +18,7 @@ public interface BaseMapper<E, D> {
     default Page<D> toDtoPage(Page<E> entities) {
         List<D> dtoList = entities.getContent().stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
         return new PageImpl<>(dtoList, entities.getPageable(), entities.getTotalElements());
     }
 
